Fixed bug where config page inputs were improperly rendered on Firefox on Windows

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 .bgIn,
 .stcIn {
   width: 450px;
-  padding-bottom: 10px;
+  padding-bottom: 14px;
 }
 
 #song {
